[gd_scene load_steps=7 format=3 uid="uid://xrcvxw3gl6si"]

[ext_resource type="Script" path="res://scripts/ui/event_fuse.gd" id="1_dh21w"]
[ext_resource type="Theme" uid="uid://dau23jgucm04a" path="res://assets/theme/lightkeepers_theme.tres" id="2_hb01d"]
[ext_resource type="PackedScene" uid="uid://cdkcd23fl4s0a" path="res://components/interface/slot.tscn" id="2_k2jnm"]
[ext_resource type="PackedScene" uid="uid://cv2uw4v0xn7k7" path="res://components/interface/input_slot.tscn" id="2_oi50j"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_as80f"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_qottb"]
size = Vector2(96, 96)

[node name="FuseEvent" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 320.0
offset_top = 192.0
offset_right = -320.0
offset_bottom = -208.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxEmpty_as80f")
script = ExtResource("1_dh21w")

[node name="EventBG" type="Panel" parent="."]
z_index = -200
z_as_relative = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="InputSlots" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 74.0
offset_top = -256.0
offset_right = -74.0
offset_bottom = -160.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_hb01d")
theme_override_constants/separation = 16
alignment = 1

[node name="InputSlot1" parent="InputSlots" instance=ExtResource("2_oi50j")]
layout_mode = 2

[node name="PlusSign" type="Label" parent="InputSlots"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "+"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InputSlot2" type="CenterContainer" parent="InputSlots"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
use_top_left = true

[node name="Input2" parent="InputSlots/InputSlot2" instance=ExtResource("2_k2jnm")]
position = Vector2(48, 48)
slot_type = 1

[node name="EqualSign" type="Label" parent="InputSlots"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "="
horizontal_alignment = 1
vertical_alignment = 1

[node name="OutputSlot" type="CenterContainer" parent="InputSlots"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
use_top_left = true

[node name="OffsetControl" type="Control" parent="InputSlots/OutputSlot"]
layout_mode = 2

[node name="ConfirmButton" type="TextureButton" parent="InputSlots/OutputSlot/OffsetControl"]
z_index = 25
layout_mode = 2
offset_right = 96.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(48, 48)
texture_normal = SubResource("PlaceholderTexture2D_qottb")

[node name="Output" parent="InputSlots/OutputSlot" instance=ExtResource("2_k2jnm")]
position = Vector2(48, 48)
is_output = true

[node name="CloseEventButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -32.0
offset_bottom = 32.0
grow_horizontal = 0
mouse_default_cursor_shape = 2
text = "X"
flat = true

[connection signal="pressed" from="InputSlots/OutputSlot/OffsetControl/ConfirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="pressed" from="CloseEventButton" to="." method="_on_close_event_button_pressed"]

[editable path="InputSlots/InputSlot1"]
