[gd_scene load_steps=45 format=3 uid="uid://brbqmcfgkka7f"]

[ext_resource type="Script" path="res://scripts/ui/ui.gd" id="1_7no1j"]
[ext_resource type="PackedScene" uid="uid://cbjip80jxb5mp" path="res://scenes/ui/ui_event_layer.tscn" id="2_7rfuu"]
[ext_resource type="Resource" uid="uid://cxplnjmi337jt" path="res://scripts/resources/elements/default_registers/FireRegister.tres" id="2_ly4ir"]
[ext_resource type="Theme" uid="uid://dau23jgucm04a" path="res://assets/theme/lightkeepers_theme.tres" id="2_x8juj"]
[ext_resource type="PackedScene" uid="uid://cjwy1y2fo5nc4" path="res://components/interface/demolish_button.tscn" id="3_ckdtt"]
[ext_resource type="Script" path="res://scripts/ui/draggable_button.gd" id="3_h835t"]
[ext_resource type="Resource" uid="uid://nojuy8ypf07k" path="res://scripts/resources/elements/default_registers/WaterRegister.tres" id="3_iqwj1"]
[ext_resource type="Resource" uid="uid://ci7epsk0qe7mk" path="res://scripts/resources/elements/default_registers/AirRegister.tres" id="4_06pcj"]
[ext_resource type="PackedScene" uid="uid://b8e2jpe7y87cm" path="res://components/interface/tower_button.tscn" id="4_jbcwa"]
[ext_resource type="Resource" uid="uid://djkttk26w5qaa" path="res://scripts/resources/elements/default_registers/EarthRegister.tres" id="5_5ri6y"]
[ext_resource type="Texture2D" uid="uid://dql2gj46mbt71" path="res://assets/prototypes/seta.png" id="5_us4v6"]
[ext_resource type="Texture2D" uid="uid://dcoyykvqvr0d0" path="res://assets/prototypes/pyrite.png" id="6_eiqqm"]
[ext_resource type="StyleBox" uid="uid://behn0ug145wni" path="res://assets/theme/styleboxes/flat/ui_frame.tres" id="7_mrlhg"]
[ext_resource type="PackedScene" uid="uid://clmhdu52mt0lt" path="res://components/entities/turrets/lamp.tscn" id="7_nkijl"]
[ext_resource type="PackedScene" uid="uid://c63fegbp12b6o" path="res://components/interface/control_slot.tscn" id="8_am10k"]
[ext_resource type="PackedScene" uid="uid://cdgvmycunep3f" path="res://components/entities/turrets/cannon_tower.tscn" id="8_l8uqo"]
[ext_resource type="Texture2D" uid="uid://cibu3vyj1k0ec" path="res://assets/prototypes/heart.png" id="8_qvuwj"]
[ext_resource type="Script" path="res://scripts/ui/event_fuse.gd" id="8_wp3i2"]
[ext_resource type="PackedScene" uid="uid://cv2uw4v0xn7k7" path="res://components/interface/input_slot.tscn" id="9_ii0gs"]
[ext_resource type="PackedScene" uid="uid://cdkcd23fl4s0a" path="res://components/interface/slot.tscn" id="10_0snv3"]
[ext_resource type="Texture2D" uid="uid://c3xw8q7amylml" path="res://assets/sprites/elements/fire.png" id="12_5tcgt"]
[ext_resource type="Resource" uid="uid://cif4ikpvj2qi8" path="res://scripts/resources/elements/FireElement.tres" id="13_hlgc1"]
[ext_resource type="Texture2D" uid="uid://heffv4rim1jj" path="res://assets/sprites/elements/water.png" id="14_dyp6q"]
[ext_resource type="Texture2D" uid="uid://301gww06uk6n" path="res://assets/prototypes/gear.png" id="14_rjvi7"]
[ext_resource type="Resource" uid="uid://d0a770bi30hno" path="res://scripts/resources/elements/WaterElement.tres" id="15_sqh7q"]
[ext_resource type="Resource" uid="uid://4hltno1bly0a" path="res://scripts/resources/elements/AirElement.tres" id="17_7oxc3"]
[ext_resource type="Shader" path="res://assets/shaders/outline.gdshader" id="17_nh1qq"]
[ext_resource type="PackedScene" uid="uid://dabti1py4rn1a" path="res://components/interface/object.tscn" id="17_opm6q"]
[ext_resource type="Texture2D" uid="uid://c8hmt5e5vmgt4" path="res://assets/theme/styleboxes/stylebox_screen_frame.png" id="17_wrifp"]
[ext_resource type="Texture2D" uid="uid://bcfhqtysyihks" path="res://assets/sprites/elements/air.png" id="18_4h15y"]
[ext_resource type="Texture2D" uid="uid://cnuto5ikwqnqv" path="res://assets/sprites/elements/earth.png" id="19_1inae"]
[ext_resource type="Resource" uid="uid://d00rruq53h787" path="res://scripts/resources/elements/EarthElement.tres" id="19_a637k"]
[ext_resource type="Texture2D" uid="uid://cyrjtqa6fmfdv" path="res://assets/prototypes/play_button.png" id="19_k7dll"]
[ext_resource type="Texture2D" uid="uid://dhc5dpc01fp4w" path="res://assets/prototypes/speed.png" id="24_dr5sr"]
[ext_resource type="PackedScene" uid="uid://bg8dos7yx10dx" path="res://components/entities/turrets/tower.tscn" id="30_d0kwp"]
[ext_resource type="FontFile" uid="uid://dk26vsfaimn17" path="res://assets/theme/fonts/dpcomic.ttf" id="31_ulfvl"]
[ext_resource type="ButtonGroup" uid="uid://cdaiitge3bsbm" path="res://components/interface/shop_buttons.tres" id="33_24gcv"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_r3gyy"]
texture = ExtResource("17_wrifp")
texture_margin_left = 3.0
texture_margin_top = 3.0
texture_margin_right = 3.0
texture_margin_bottom = 3.0
draw_center = false

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_v1emh"]
size = Vector2(96, 96)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cjjh3"]
shader = ExtResource("17_nh1qq")
shader_parameter/line_color = Color(1, 0.92549, 0.513726, 1)
shader_parameter/line_thickness = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s5qoe"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xj3q8"]
texture_margin_right = 24.0

[sub_resource type="SystemFont" id="SystemFont_xb3ae"]
subpixel_positioning = 0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5q6f8"]
shader = ExtResource("17_nh1qq")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 1.0

[node name="Interface" type="CanvasLayer"]
layer = 50
script = ExtResource("1_7no1j")
shop_button_group = ExtResource("33_24gcv")

[node name="ScreenFrame" type="Panel" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_r3gyy")

[node name="EventLayer" parent="." instance=ExtResource("2_7rfuu")]

[node name="Screen" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("2_x8juj")

[node name="ElementContainer" type="BoxContainer" parent="Screen"]
custom_minimum_size = Vector2(0, 145)
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -144.0
offset_bottom = 1.0
pivot_offset = Vector2(1280, 144)
mouse_filter = 2
theme_override_constants/separation = 0

[node name="HideButton" type="TextureButton" parent="Screen/ElementContainer"]
z_index = 1
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("5_us4v6")
flip_h = true

[node name="Panel" type="Panel" parent="Screen/ElementContainer/HideButton"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = ExtResource("7_mrlhg")

[node name="FusePanel" type="Panel" parent="Screen/ElementContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_styles/panel = ExtResource("7_mrlhg")

[node name="FuseSystem" type="HBoxContainer" parent="Screen/ElementContainer/FusePanel"]
layout_mode = 2
offset_left = 58.5
offset_top = 24.5
offset_right = 476.5
offset_bottom = 120.5
mouse_filter = 2
theme = ExtResource("2_x8juj")
theme_override_constants/separation = 16
alignment = 1
script = ExtResource("8_wp3i2")

[node name="InputSlot1" parent="Screen/ElementContainer/FusePanel/FuseSystem" instance=ExtResource("9_ii0gs")]
layout_mode = 2

[node name="Slot" parent="Screen/ElementContainer/FusePanel/FuseSystem/InputSlot1" index="0"]
slot_type = 0

[node name="PlusSign" type="Label" parent="Screen/ElementContainer/FusePanel/FuseSystem"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "+"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InputSlot2" parent="Screen/ElementContainer/FusePanel/FuseSystem" instance=ExtResource("9_ii0gs")]
layout_mode = 2

[node name="Slot" parent="Screen/ElementContainer/FusePanel/FuseSystem/InputSlot2" index="0"]
slot_type = 0

[node name="EqualSign" type="Label" parent="Screen/ElementContainer/FusePanel/FuseSystem"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "="
horizontal_alignment = 1
vertical_alignment = 1

[node name="OutputSlot" type="CenterContainer" parent="Screen/ElementContainer/FusePanel/FuseSystem"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
mouse_filter = 2
use_top_left = true

[node name="OffsetControl" type="Control" parent="Screen/ElementContainer/FusePanel/FuseSystem/OutputSlot"]
layout_mode = 2
mouse_filter = 2

[node name="ConfirmButton" type="TextureButton" parent="Screen/ElementContainer/FusePanel/FuseSystem/OutputSlot/OffsetControl"]
visible = false
layout_mode = 2
offset_right = 96.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(48, 48)
texture_normal = SubResource("PlaceholderTexture2D_v1emh")

[node name="Output" parent="Screen/ElementContainer/FusePanel/FuseSystem/OutputSlot" instance=ExtResource("10_0snv3")]
position = Vector2(48, 48)
is_output = true

[node name="ElementInterface" type="Panel" parent="Screen/ElementContainer"]
custom_minimum_size = Vector2(460, 0)
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = ExtResource("7_mrlhg")

[node name="ElementSlots" type="BoxContainer" parent="Screen/ElementContainer/ElementInterface"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -48.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16
alignment = 1

[node name="FireContainer" parent="Screen/ElementContainer/ElementInterface/ElementSlots" instance=ExtResource("8_am10k")]
layout_mode = 2
slot_register = ExtResource("2_ly4ir")

[node name="Slot" parent="Screen/ElementContainer/ElementInterface/ElementSlots/FireContainer" index="0"]
slot_type = 1

[node name="FireObject" parent="Screen/ElementContainer/ElementInterface/ElementSlots/FireContainer/Slot" index="0" node_paths=PackedStringArray("active_slot", "home_slot") instance=ExtResource("17_opm6q")]
active_slot = NodePath("..")
home_slot = NodePath("..")
element = ExtResource("13_hlgc1")

[node name="ObjectElement" parent="Screen/ElementContainer/ElementInterface/ElementSlots/FireContainer/Slot/FireObject/ObjectOrb" index="0"]
texture = ExtResource("12_5tcgt")

[node name="WaterContainer" parent="Screen/ElementContainer/ElementInterface/ElementSlots" instance=ExtResource("8_am10k")]
layout_mode = 2
slot_register = ExtResource("3_iqwj1")

[node name="Slot" parent="Screen/ElementContainer/ElementInterface/ElementSlots/WaterContainer" index="0"]
slot_type = 1

[node name="WaterObject" parent="Screen/ElementContainer/ElementInterface/ElementSlots/WaterContainer/Slot" index="2" node_paths=PackedStringArray("active_slot", "home_slot") instance=ExtResource("17_opm6q")]
active_slot = NodePath("..")
home_slot = NodePath("..")
element = ExtResource("15_sqh7q")

[node name="ObjectElement" parent="Screen/ElementContainer/ElementInterface/ElementSlots/WaterContainer/Slot/WaterObject/ObjectOrb" index="0"]
texture = ExtResource("14_dyp6q")

[node name="AirContainer" parent="Screen/ElementContainer/ElementInterface/ElementSlots" instance=ExtResource("8_am10k")]
layout_mode = 2
slot_register = ExtResource("4_06pcj")

[node name="Slot" parent="Screen/ElementContainer/ElementInterface/ElementSlots/AirContainer" index="0"]
slot_type = 1

[node name="AirObject" parent="Screen/ElementContainer/ElementInterface/ElementSlots/AirContainer/Slot" index="2" node_paths=PackedStringArray("active_slot", "home_slot") instance=ExtResource("17_opm6q")]
active_slot = NodePath("..")
home_slot = NodePath("..")
element = ExtResource("17_7oxc3")

[node name="ObjectElement" parent="Screen/ElementContainer/ElementInterface/ElementSlots/AirContainer/Slot/AirObject/ObjectOrb" index="0"]
texture = ExtResource("18_4h15y")

[node name="EarthContainer" parent="Screen/ElementContainer/ElementInterface/ElementSlots" instance=ExtResource("8_am10k")]
layout_mode = 2
slot_register = ExtResource("5_5ri6y")

[node name="Slot" parent="Screen/ElementContainer/ElementInterface/ElementSlots/EarthContainer" index="0"]
slot_type = 1

[node name="EarthObject" parent="Screen/ElementContainer/ElementInterface/ElementSlots/EarthContainer/Slot" index="2" node_paths=PackedStringArray("active_slot", "home_slot") instance=ExtResource("17_opm6q")]
active_slot = NodePath("..")
home_slot = NodePath("..")
element = ExtResource("19_a637k")

[node name="ObjectElement" parent="Screen/ElementContainer/ElementInterface/ElementSlots/EarthContainer/Slot/EarthObject/ObjectOrb" index="0"]
texture = ExtResource("19_1inae")

[node name="CornerRect" type="ReferenceRect" parent="Screen/ElementContainer"]
custom_minimum_size = Vector2(221, 0)
layout_mode = 2
size_flags_horizontal = 8
border_width = 0.0
editor_only = false

[node name="HUD" type="Control" parent="Screen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Tools" type="BoxContainer" parent="Screen/HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_top = 60.0
offset_right = -236.0
offset_bottom = 260.0
grow_horizontal = 0
alignment = 2
vertical = true

[node name="OptionsButton" type="TextureButton" parent="Screen/HUD/Tools"]
material = SubResource("ShaderMaterial_cjjh3")
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
tooltip_text = "CONFIG"
toggle_mode = true
texture_normal = ExtResource("14_rjvi7")
stretch_mode = 3

[node name="SpeedButton" type="TextureButton" parent="Screen/HUD/Tools"]
material = SubResource("ShaderMaterial_cjjh3")
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
tooltip_text = "CONFIG"
toggle_mode = true
texture_normal = ExtResource("24_dr5sr")
stretch_mode = 3

[node name="DemolishButton" parent="Screen/HUD/Tools" instance=ExtResource("3_ckdtt")]
layout_mode = 2
tooltip_text = "DEMOLISH"

[node name="Shop" type="VBoxContainer" parent="Screen/HUD"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.004
offset_left = -221.0
offset_bottom = -146.88
grow_horizontal = 0
theme_override_constants/separation = 0

[node name="ShopButtons" type="Panel" parent="Screen/HUD/Shop"]
custom_minimum_size = Vector2(0, 53)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_s5qoe")

[node name="ShopButtonsContainer" type="HBoxContainer" parent="Screen/HUD/Shop/ShopButtons"]
custom_minimum_size = Vector2(0, 53)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0
mouse_filter = 2
alignment = 1

[node name="TowersButton" type="Button" parent="Screen/HUD/Shop/ShopButtons/ShopButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_pressed = true
button_group = ExtResource("33_24gcv")
text = "TOWERS"

[node name="ElementsButton" type="Button" parent="Screen/HUD/Shop/ShopButtons/ShopButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_group = ExtResource("33_24gcv")
text = "ELEMENTS"

[node name="Towers" type="Panel" parent="Screen/HUD/Shop"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_styles/panel = ExtResource("7_mrlhg")

[node name="TowerScrollContainer" type="ScrollContainer" parent="Screen/HUD/Shop/Towers"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="TowerGrid" type="GridContainer" parent="Screen/HUD/Shop/Towers/TowerScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 12
columns = 2

[node name="LampTower" parent="Screen/HUD/Shop/Towers/TowerScrollContainer/TowerGrid" instance=ExtResource("4_jbcwa")]
layout_mode = 2
object_type = "LIGHT"
target_tower_scene = ExtResource("7_nkijl")

[node name="BallistaTower" parent="Screen/HUD/Shop/Towers/TowerScrollContainer/TowerGrid" instance=ExtResource("4_jbcwa")]
layout_mode = 2

[node name="CannonTower" parent="Screen/HUD/Shop/Towers/TowerScrollContainer/TowerGrid" instance=ExtResource("4_jbcwa")]
layout_mode = 2
target_tower_scene = ExtResource("8_l8uqo")

[node name="PlaceholderTower" parent="Screen/HUD/Shop/Towers/TowerScrollContainer/TowerGrid" instance_placeholder="res://components/interface/tower_button.tscn"]
layout_mode = 2
target_tower_scene = ExtResource("30_d0kwp")

[node name="Elements" type="Panel" parent="Screen/HUD/Shop"]
visible = false
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_styles/panel = ExtResource("7_mrlhg")

[node name="ElementsScrollContainer" type="ScrollContainer" parent="Screen/HUD/Shop/Elements"]
clip_contents = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="ElementsGrid" type="GridContainer" parent="Screen/HUD/Shop/Elements/ElementsScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
mouse_filter = 2
columns = 2

[node name="Placeholder" parent="Screen/HUD/Shop/Elements/ElementsScrollContainer/ElementsGrid" instance_placeholder="res://components/interface/control_slot.tscn"]
layout_mode = 2

[node name="Status" type="Panel" parent="Screen/HUD"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_right = -221.0
offset_bottom = 48.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_xj3q8")

[node name="DataContainer" type="HBoxContainer" parent="Screen/HUD/Status"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -24.0
offset_right = 202.0
offset_bottom = 24.0
grow_vertical = 2

[node name="LifeIcon" type="TextureButton" parent="Screen/HUD/Status/DataContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture_normal = ExtResource("8_qvuwj")
stretch_mode = 0

[node name="LifeLabel" type="Label" parent="Screen/HUD/Status/DataContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 2
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("31_ulfvl")
theme_override_font_sizes/font_size = 32
text = "100"

[node name="CoinIcon" type="TextureButton" parent="Screen/HUD/Status/DataContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture_normal = ExtResource("6_eiqqm")
stretch_mode = 0

[node name="CoinLabel" type="Label" parent="Screen/HUD/Status/DataContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 2
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("31_ulfvl")
theme_override_font_sizes/font_size = 32
text = "0
"

[node name="WaveCounter" type="Label" parent="Screen/HUD/Status"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -234.0
offset_top = -18.0
offset_right = -12.0
offset_bottom = 18.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 2
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("31_ulfvl")
theme_override_font_sizes/font_size = 32
text = "TURN 0/30"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Info" type="VBoxContainer" parent="Screen/HUD"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 11.0
offset_top = -480.0
offset_right = 320.0
offset_bottom = -152.0
grow_vertical = 0
pivot_offset = Vector2(157, 164)
mouse_filter = 2
alignment = 2

[node name="ObjectDescriptionLabel" type="Label" parent="Screen/HUD/Info"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_xb3ae")

[node name="DebugLabel" type="Label" parent="Screen/HUD/Info"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_xb3ae")

[node name="TileDescriptionLabel" type="Label" parent="Screen/HUD/Info"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_xb3ae")

[node name="CornerPanel" type="Panel" parent="Screen/HUD"]
z_index = 20
clip_contents = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -221.0
offset_top = -144.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/panel = ExtResource("7_mrlhg")

[node name="PlayButton" type="TextureButton" parent="Screen/HUD/CornerPanel"]
material = SubResource("ShaderMaterial_5q6f8")
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -108.0
offset_top = -124.0
offset_right = -8.0
offset_bottom = -24.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("19_k7dll")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("3_h835t")

[node name="AutoplayButton" type="CheckButton" parent="Screen/HUD/CornerPanel"]
layout_mode = 0
offset_left = 23.0
offset_top = 56.0
offset_right = 71.0
offset_bottom = 90.0
tooltip_text = "AUTOPLAY"
alignment = 1
icon_alignment = 1
expand_icon = true

[connection signal="mouse_exited" from="Screen" to="." method="_on_screen_mouse_exited"]
[connection signal="pressed" from="Screen/ElementContainer/HideButton" to="." method="_on_hide_button_pressed"]
[connection signal="pressed" from="Screen/HUD/Tools/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="Screen/HUD/Tools/SpeedButton" to="." method="_on_speed_button_pressed"]
[connection signal="pressed" from="Screen/HUD/CornerPanel/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="toggled" from="Screen/HUD/CornerPanel/AutoplayButton" to="." method="_on_autoplay_button_toggled"]

[editable path="Screen/ElementContainer/FusePanel/FuseSystem/InputSlot1"]
[editable path="Screen/ElementContainer/FusePanel/FuseSystem/InputSlot2"]
[editable path="Screen/ElementContainer/ElementInterface/ElementSlots/FireContainer"]
[editable path="Screen/ElementContainer/ElementInterface/ElementSlots/FireContainer/Slot"]
[editable path="Screen/ElementContainer/ElementInterface/ElementSlots/FireContainer/Slot/FireObject"]
[editable path="Screen/ElementContainer/ElementInterface/ElementSlots/WaterContainer"]
[editable path="Screen/ElementContainer/ElementInterface/ElementSlots/WaterContainer/Slot/WaterObject"]
[editable path="Screen/ElementContainer/ElementInterface/ElementSlots/AirContainer"]
[editable path="Screen/ElementContainer/ElementInterface/ElementSlots/AirContainer/Slot/AirObject"]
[editable path="Screen/ElementContainer/ElementInterface/ElementSlots/EarthContainer"]
[editable path="Screen/ElementContainer/ElementInterface/ElementSlots/EarthContainer/Slot/EarthObject"]
